Swipe fix text overflow && toggle writable set to double click

--- a/client/src/style/swipeable.scss
+++ b/client/src/style/swipeable.scss
@@ -6,6 +6,10 @@
   padding: 10%
 }
 
+.hide-overflow{
+  text-overflow: ellipsis
+}
+
 #review{
   .swipeable{
     position: relative;
